--- a/src/StyleSheet/QuestionList.css
+++ b/src/StyleSheet/QuestionList.css
@@ -93,3 +93,12 @@
 .comments:hover {
   color: var(--secondaryCOlor);
 }
+
+@media (max-width: 500px) {
+  .question__question {
+    font-size: 13px;
+  }
+  .Questions {
+    font-size: 14px;
+  }
+}
